# vibeEmu

./: .gitignore  AGENTS.md  BUILD.md  Cargo.toml  LICENSE  README.md  TEST_STATUS.md  THIRD_PARTY_LICENSES.html  THIRD_PARTY_LICENSES.md  TODO.md  UI_TODO.md  about.hbs  about.toml  deny.toml  license.html  multi-view-todo.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: build-mac-release.yml  ci.yml  codeql.yml
crates/vibe-emu-core/: Cargo.toml
crates/vibe-emu-core/examples/: dump_wav.rs
crates/vibe-emu-core/src/: apu.rs  audio_queue.rs  cartridge.rs  cpu.rs  diagnostics.rs  gameboy.rs  hardware.rs  lib.rs  mmu.rs  ppu.rs  serial.rs  watchpoints.rs
crates/vibe-emu-core/tests/: apu.rs  apu_quirks.rs  bgb_protocol.rs  bullygb_hacktix.rs  cartridge.rs  cgb_acid2_rom.rs  cgb_acid_hell_rom.rs  cgb_sound_roms.rs  channel_activation.rs  cpu.rs  cpu_instrs_rom.rs  daid.rs  dmg_acid2_rom.rs  dmg_sound_roms.rs  gambatte.rs  gambatte_ignored.txt  halt_bug_rom.rs  instr_timing_rom.rs  interrupt_time_rom.rs  latch_rtc_test.rs  mealybug_tearoom.rs  mem_timing_rom.rs  mmu.rs  mooneye_acceptance.rs  oam_bug_rom_singles.rs  ppu.rs  prehistorik_probe.rs  rtc_invalid_banks_test.rs  same_suite.rs  serial.rs  strikethrough.rs  timer.rs
crates/vibe-emu-core/tests/common/: mod.rs
crates/vibe-emu-mobile/: Cargo.toml
crates/vibe-emu-mobile-sys/: Cargo.toml  build.rs
crates/vibe-emu-mobile-sys/src/: lib.rs
crates/vibe-emu-mobile/src/: lib.rs  std_host.rs
crates/vibe-emu-mobile/tests/: libmobile_smoke.rs
crates/vibe-emu-ui/: Cargo.toml  build.rs
crates/vibe-emu-ui/src/: audio.rs  keybinds.rs  main.rs  network_link.rs  scaler.rs  ui_config.rs
crates/vibe-emu-ui/src/shaders/: game_scale.wgsl
crates/vibe-emu-ui/src/ui/: code_data.rs  debugger.rs  disasm.rs  mod.rs  snapshot.rs  vram_viewer.rs  watchpoints.rs  window.rs
scripts/: bgb_link_sniffer.py  collect_notices.py  generate_app_icons.py  update_test_status.py
special_test_roms/: channel_1_align.gb  channel_1_align_cpu.gb  channel_1_delay.gb
src/: apu.rs  audio.rs  cartridge.rs  cpu.rs  gameboy.rs  hardware.rs  lib.rs  main.rs  mmu.rs  ppu.rs  serial.rs  timer.rs
src/ui/: mod.rs  vram_viewer.rs  window.rs
tests/: apu.rs  apu_quirks.rs  cgb_acid2_rom.rs  channel_activation.rs  cpu.rs  cpu_instrs_rom.rs  dmg_acid2_rom.rs  dmg_sound_roms.rs  halt_bug_rom.rs  instr_timing_rom.rs  mem_timing_rom.rs  mmu.rs  mooneye_acceptance.rs  ppu.rs  same_suite.rs  timer.rs
tests/common/: mod.rs
