[package]
name = "vibeEmu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
winit = "0.27.5"
wgpu = "0.17"
pixels = "0.14"
imgui = { version = "0.11", features = ["docking", "tables-api"] }
imgui-winit-support = "0.11"
imgui-wgpu = "0.24"
cpal = "0.15"
log = "0.4"
env_logger = "0.11"
bytemuck = "1.14"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
zip = "4.3"
