[package]
name = "vibeEmu"
version = "0.1.0"
edition = "2024"

[features]
default = []
apu-trace = []

[dependencies]
clap = { version = "4", features = ["derive"] }
winit = { version = "0.30.12", features = ["rwh_05"] }
wgpu = "0.17"
pixels = "0.14"
imgui = { version = "0.12", features = ["docking", "tables-api"] }
imgui-winit-support = "0.13"
imgui-wgpu = "0.24"
cpal = "0.16"
log = "0.4"
env_logger = "0.11"
bytemuck = "1.23"
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[patch.crates-io]
imgui-wgpu = { path = "vendor/imgui-wgpu-0.24.0" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
zip = "4.3"
