[package]
name = "vibe-emu-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"

[features]
default = []
ppu-trace = []
apu-trace = []

[dev-dependencies]
once_cell = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
zip = "6.0"
png = "0.18"
libtest-mimic = "0.8"
hound = "3"

[[test]]
name = "gambatte"
path = "tests/gambatte.rs"
harness = false
