[package]
name = "vibe-emu-core"
version = "0.1.0"
edition = "2024"
authors = ["vulcandth <vulcandth@gmail.com>"]
license = "MIT"

[dependencies]


[features]
default = []
ppu-trace = []
apu-trace = []
cpu-trace = []

[dev-dependencies]
once_cell = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
zip = "7.2.0"
png = "0.18"
libtest-mimic = "0.8"

[[test]]
name = "gambatte"
path = "tests/gambatte.rs"
harness = false
# Exclude from default test runs - use `cargo gambatte_test` to run explicitly
test = false
