[package]
name = "vibe-emu-ui"
version = "0.1.0"
edition = "2024"
authors = ["vulcandth <vulcandth@gmail.com>"]
license = "MIT"

[features]
mobile-bundled = ["vibe-emu-mobile/bundled"]
mobile-system = ["vibe-emu-mobile/system"]

default = ["mobile-bundled"]

[dependencies]
vibe-emu-core = { path = "../vibe-emu-core" }
vibe-emu-mobile = { path = "../vibe-emu-mobile" }
clap = { version = "4", features = ["derive"] }
winit = { version = "0.30.12", features = ["rwh_05"] }
wgpu = "0.17"
pixels = "0.14"
imgui = { version = "0.12", features = ["docking", "tables-api"] }
imgui-winit-support = "0.13"
imgui-wgpu = "0.24"
cpal = "0.17"
png = "0.18"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.16", default-features = false, features = ["gtk3"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
rfd = { version = "0.16" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
