[package]
name = "vibe-emu-ui"
version = "0.1.0"
edition = "2024"
authors = ["vulcandth <vulcandth@gmail.com>"]
license = "MIT"

[features]
mobile-bundled = ["vibe-emu-mobile/bundled"]
mobile-system = ["vibe-emu-mobile/system"]

default = ["mobile-bundled"]

[dependencies]
vibe-emu-core = { path = "../vibe-emu-core" }
vibe-emu-mobile = { path = "../vibe-emu-mobile" }
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
cpal = "0.17"
png = "0.18"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.9.11"

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "25", default-features = false, features = ["vulkan"] }
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
rfd = { version = "0.17.2" }

[target.'cfg(windows)'.dependencies]
wgpu = { version = "25", default-features = false, features = ["dx12", "vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "25", default-features = false, features = ["metal"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
